--- a/semgrep-rules/java-warning.yml
+++ b/semgrep-rules/java-warning.yml
@@ -1,14 +1,13 @@
 rules:
 
-  # 1. Empty catch blocks
+  # 1. Empty catch block
   - id: empty-catch-block
     message: "Empty catch block. Handle or log the exception."
     languages: [java]
     severity: ERROR
-    pattern: |
-      catch ($EX) {}
+    pattern-regex: "catch\\s*\\([^)]*\\)\\s*\\{\\s*\\}"
 
-  # 2. printStackTrace
+  # 2. printStackTrace forbidden
   - id: no-print-stacktrace
     message: "Avoid printStackTrace(); use proper logging."
     severity: ERROR
@@ -16,7 +15,7 @@ rules:
     pattern: |
       $E.printStackTrace()
 
-  # 3. System.out.println
+  # 3. System.out.println forbidden
   - id: no-system-out
     message: "Avoid System.out.println; use logging framework."
     severity: ERROR
@@ -29,14 +28,20 @@ rules:
     message: "Do not log sensitive data (password, token, PAN, phone, email)."
     severity: ERROR
     languages: [java]
-    pattern-regex: "(?i)logger\\.(info|debug|warn|error).*?(password|token|secret|card|phone|email)"
+    pattern-either:
+      - pattern-regex: "(?i)logger\\.[a-zA-Z]+\\(.*password.*\\)"
+      - pattern-regex: "(?i)logger\\.[a-zA-Z]+\\(.*token.*\\)"
+      - pattern-regex: "(?i)logger\\.[a-zA-Z]+\\(.*secret.*\\)"
+      - pattern-regex: "(?i)logger\\.[a-zA-Z]+\\(.*card.*\\)"
+      - pattern-regex: "(?i)logger\\.[a-zA-Z]+\\(.*email.*\\)"
+      - pattern-regex: "(?i)logger\\.[a-zA-Z]+\\(.*phone.*\\)"
 
-  # 5. Hardcoded Secrets
+  # 5. Hardcoded credentials
   - id: hardcoded-credentials
-    message: "Hardcoded credential found; use secrets manager/config."
-    severity: ERROR
+    message: "Hardcoded credential found; use secrets manager or config."
     languages: [java]
-    pattern-regex: "(?i)(password|token|secret|apikey)\\s*=\\s*\".+\""
+    severity: ERROR
+    pattern-regex: "(?i)(password|passwd|pwd|token|secret|apikey)\\s*=\\s*\"[^\"]+\""
 
   # 6. Hardcoded URLs
   - id: hardcoded-url
@@ -47,46 +52,49 @@ rules:
 
   # 7. SQL string concatenation
   - id: sql-concat
-    message: "SQL concatenation is vulnerable to injection."
+    message: "SQL based on string concatenation is vulnerable to injection."
     severity: ERROR
     languages: [java]
-    pattern-regex: "\"(?i)select .*\"\\s*\\+"
+    pattern-regex: "(?i)select.*\\+.*from"
 
-  # 8. Thread.sleep
+  # 8. Thread.sleep forbidden
   - id: no-thread-sleep
-    message: "Thread.sleep() blocks the thread – avoid in backend."
+    message: "Thread.sleep() blocks execution. Avoid in backend services."
     severity: ERROR
     languages: [java]
     pattern: |
-      Thread.sleep(...)
+      Thread.sleep($MS)
 
-  # 9. String concat in loops
+  # 9. String concatenation inside loop
   - id: concat-in-loop
-    message: "String concatenation inside loops; use StringBuilder."
+    message: "String concatenation inside loop. Use StringBuilder."
     severity: ERROR
     languages: [java]
-    pattern: |
-      for (...) { $S = $S + $X; }
+    pattern-either:
+      - pattern: |
+          for (...) { $S = $A + $B; }
+      - pattern: |
+          for (...) { $S += $X; }
 
-  # 10. Object creation in loop
+  # 10. Object creation inside loop
   - id: object-in-loop
     message: "Object creation inside loop harms performance."
     severity: ERROR
     languages: [java]
     pattern: |
-      for (...) { new $OBJ(...); }
+      for (...) { new $X($Y*); }
 
-  # 11. N+1 query detection
+  # 11. N+1 query heuristic
   - id: nplus1-query
     message: "Possible N+1 query: DB call inside loop."
     severity: ERROR
     languages: [java]
     pattern: |
-      for (...) { $DB.$METHOD(...); }
+      for (...) { $DB.$CALL(...); }
 
   # 12. String == comparison
   - id: string-eq-operator
-    message: "Use .equals() instead of == for String comparison."
+    message: "Use .equals() instead of == for string comparison."
     severity: ERROR
     languages: [java]
     pattern: |
@@ -95,35 +103,29 @@ rules:
       $X: java.lang.String
       $Y: java.lang.String
 
-  # 13. DTO fields must be private
+  # 13. DTO public field
   - id: dto-non-private-field
-    message: "DTO fields must be private."
+    message: "DTO fields must be private to prevent accidental access."
     severity: ERROR
     languages: [java]
     pattern: |
-      public class $DTO { public $T $FIELD; }
+      public class $C { public $T $FIELD; }
 
-  # 14. Unused imports
+  # 14. Unused import
   - id: unused-import
-    message: "Unused import detected."
+    message: "Unused import detected. Remove it."
     severity: WARNING
     languages: [java]
-    pattern: import $X;
-    # Actual unused detection comes from Semgrep metadata
+    pattern: |
+      import $X;
+    # detection handled by Semgrep engine if not referenced
 
-  # 15. Magic numbers (only assignments or returns)
+  # 15. Magic number (0,1,-1 allowed)
   - id: magic-number
-    message: "Magic number detected. Use named constant."
+    message: "Magic number detected. Use a named constant."
     severity: WARNING
     languages: [java]
-    pattern-either:
-      - pattern: |
-          $X = $NUM
-      - pattern: |
-          return $NUM
-    metavariable-pattern:
-      metavariable: $NUM
-      pattern-regex: "^[2-9]$|^[1-9][0-9]+$"
+    pattern-regex: "(?<![-0-9])(2|3|4|5|6|7|8|9|[1-9][0-9]+)(?![0-9])"
 
   # 16. Field injection forbidden
   - id: no-field-autowired
