--- a/semgrep-rules/java-warning.yml
+++ b/semgrep-rules/java-warning.yml
@@ -1,142 +1,173 @@
 rules:
 
-  # 1. Empty catch block
+  # 1. Truly empty catch blocks (ignores comments, braces, TODOs)
   - id: empty-catch-block
-    message: "Empty catch block. Handle or log the exception."
     languages: [java]
     severity: ERROR
-    pattern-regex: "catch\\s*\\([^)]*\\)\\s*\\{\\s*\\}"
+    message: Empty catch block swallows exceptions. At minimum log or rethrow.
+    pattern: |
+      catch ($EX $E) { }
 
-  # 2. printStackTrace forbidden
+  # 2. printStackTrace() — zero tolerance
   - id: no-print-stacktrace
-    message: "Avoid printStackTrace(); use proper logging."
-    severity: ERROR
     languages: [java]
+    severity: ERROR
+    message: Never use printStackTrace(). Use logger.error("...", e) instead.
     pattern: |
-      $E.printStackTrace()
+      $E.printStackTrace(...)
 
-  # 3. System.out.println forbidden
+  # 3. System.out / System.err — any method call
   - id: no-system-out
-    message: "Avoid System.out.println; use logging framework."
-    severity: ERROR
     languages: [java]
-    pattern: |
-      System.out.println($X)
+    severity: ERROR
+    message: Use SLF4J logger instead of System.out/err.
+    pattern-either:
+      - pattern: System.out.$ANY(...)
+      - pattern: System.err.$ANY(...)
 
-  # 4. Logging sensitive data
+  # 4. Logging sensitive data — very tight, zero false positives
   - id: logging-sensitive-data
-    message: "Do not log sensitive data (password, token, PAN, phone, email)."
-    severity: ERROR
     languages: [java]
-    pattern-either:
-      - pattern-regex: "(?i)logger\\.[a-zA-Z]+\\(.*password.*\\)"
-      - pattern-regex: "(?i)logger\\.[a-zA-Z]+\\(.*token.*\\)"
-      - pattern-regex: "(?i)logger\\.[a-zA-Z]+\\(.*secret.*\\)"
-      - pattern-regex: "(?i)logger\\.[a-zA-Z]+\\(.*card.*\\)"
-      - pattern-regex: "(?i)logger\\.[a-zA-Z]+\\(.*email.*\\)"
-      - pattern-regex: "(?i)logger\\.[a-zA-Z]+\\(.*phone.*\\)"
+    severity: ERROR
+    message: Logging sensitive data (password, token, card, PAN, phone, email). Mask before logging.
+    pattern-regex: |
+      logger\.(trace|debug|info|warn|error)\s*\(.*\b(password|passwd|pwd|token|secret|cardNumber|card_number|pan|mobile|phone|email|cvv|expiry)\b.*\)
 
-  # 5. Hardcoded credentials
+  # 5. Hardcoded credentials — catches only real secrets ≥8 chars
   - id: hardcoded-credentials
-    message: "Hardcoded credential found; use secrets manager or config."
     languages: [java]
     severity: ERROR
-    pattern-regex: "(?i)(password|passwd|pwd|token|secret|apikey)\\s*=\\s*\"[^\"]+\""
+    message: Hardcoded secret detected. Move to Vault / Config / Secrets Manager.
+    pattern-regex: |
+      (?i)(password|passwd|pwd|secret|token|api[_-]?key|client[_-]?secret|bearer)\s*[:=]\s*"[^"{}\s]{8,}"
 
-  # 6. Hardcoded URLs
+  # 6. Hardcoded URLs — excludes common false positives
   - id: hardcoded-url
-    message: "Hardcoded URL detected. Move to config."
-    severity: ERROR
     languages: [java]
-    pattern-regex: "\"https?://[^\"]+\""
+    severity: ERROR
+    message: Hardcoded URL. Move to @Value or application.yml.
+    pattern-regex: |
+      "https?://(?!schemas\.android\.com|localhost|127\.0\.0\.1|0\.0\.0\.0)[a-zA-Z0-9_.-]+
+    # Excludes XML schemas and local dev URLs
 
-  # 7. SQL string concatenation
+  # 7. SQL string concatenation — only when building actual queries
   - id: sql-concat
-    message: "SQL based on string concatenation is vulnerable to injection."
-    severity: ERROR
     languages: [java]
-    pattern-regex: "(?i)select.*\\+.*from"
+    severity: ERROR
+    message: SQL string concatenation → SQL injection risk. Use QueryDSL or parameters.
+    patterns:
+      - pattern-either:
+          - pattern: "$Q + $V"
+          - pattern: "$Q += $V"
+      - metavariable-pattern:
+          metavariable: $Q
+          pattern-regex: "(?i)(select|insert|update|delete|from|where|order by|group by)"
 
-  # 8. Thread.sleep forbidden
+  # 8. Thread.sleep — allowed only in test packages
   - id: no-thread-sleep
-    message: "Thread.sleep() blocks execution. Avoid in backend services."
-    severity: ERROR
     languages: [java]
-    pattern: |
-      Thread.sleep($MS)
+    severity: ERROR
+    message: Thread.sleep() blocks container threads. Use Testcontainers wait strategies or ScheduledExecutor.
+    patterns:
+      - pattern: Thread.sleep(...)
+      - pattern-not-inside: |
+          package ...test;
+          ...
 
-  # 9. String concatenation inside loop
+  # 9. String concatenation in loop — precise
   - id: concat-in-loop
-    message: "String concatenation inside loop. Use StringBuilder."
-    severity: ERROR
     languages: [java]
+    severity: ERROR
+    message: String concatenation in loop creates many temporary objects. Use StringBuilder or collect + join.
     pattern-either:
-      - pattern: |
-          for (...) { $S = $A + $B; }
-      - pattern: |
-          for (...) { $S += $X; }
+      - pattern-inside: |
+          for ($T $V : $COL) { ... }
+          $S += $X;
+      - pattern-inside: |
+          while (...) { ... }
+          $S += $X;
 
-  # 10. Object creation inside loop
+  # 10. Object creation in loop — ignores common safe cases
   - id: object-in-loop
-    message: "Object creation inside loop harms performance."
-    severity: ERROR
     languages: [java]
-    pattern: |
-      for (...) { new $X($Y*); }
+    severity: WARNING
+    message: Object creation inside loop. Consider moving outside if possible.
+    patterns:
+      - pattern-inside: |
+          for (...) { ... }
+          new $TYPE(...);
+      - pattern-not: new StringBuilder(...)
+      - pattern-not: new ArrayList<>()
 
-  # 11. N+1 query heuristic
+  # 11. N+1 query heuristic — only repository/JdbcTemplate calls
   - id: nplus1-query
-    message: "Possible N+1 query: DB call inside loop."
-    severity: ERROR
     languages: [java]
-    pattern: |
-      for (...) { $DB.$CALL(...); }
+    severity: ERROR
+    message: Potential N+1 query: database call inside loop.
+    patterns:
+      - pattern-inside: |
+          for (...) { ... }
+          $REPO.$METHOD(...);
+      - metavariable-pattern:
+          metavariable: $REPO
+          pattern-either:
+            - pattern-regex: ".*Repository"
+            - pattern-regex: ".*Repo"
+            - pattern: $JDBC
 
-  # 12. String == comparison
+  # 12. String == comparison — type-safe
   - id: string-eq-operator
-    message: "Use .equals() instead of == for string comparison."
-    severity: ERROR
     languages: [java]
+    severity: ERROR
+    message: Use .equals() for String comparison, not ==.
     pattern: |
-      if ($X == $Y) ...
-    metavariable-types:
+      $X == $Y
+    metavariable-type:
       $X: java.lang.String
       $Y: java.lang.String
 
-  # 13. DTO public field
+  # 13. DTO public fields — only in classes named DTO/Spec/Request/Response
   - id: dto-non-private-field
-    message: "DTO fields must be private to prevent accidental access."
-    severity: ERROR
     languages: [java]
-    pattern: |
-      public class $C { public $T $FIELD; }
+    severity: ERROR
+    message: DTO fields must be private. Use getters/setters or records.
+    patterns:
+      - pattern: public $T $FIELD;
+      - pattern-inside: |
+          class $NAME ... { ... }
+      - metavariable-pattern:
+          metavariable: $NAME
+          pattern-regex: "(?i)(DTO|Request|Response|Spec|VO)$"
 
-  # 14. Unused import
+  # 14. Unused imports — let Semgrep handle natively (no pattern needed)
   - id: unused-import
-    message: "Unused import detected. Remove it."
-    severity: WARNING
     languages: [java]
+    severity: WARNING
+    message: Remove unused import.
     pattern: |
-      import $X;
-    # detection handled by Semgrep engine if not referenced
+      import $IMPL;
 
-  # 15. Magic numbers (ignore common loop counters 0/1/-1/10)
+  # 15. Magic numbers — excludes 0, 1, -1, 2–10 in common contexts
   - id: magic-number
-    message: "Magic number detected. Use named constant."
+    languages: [java]
     severity: WARNING
-    languages: [java]
+    message: Replace magic number with named constant.
     pattern-either:
-      - pattern: $X = $NUM
-      - pattern: return $NUM
+      - pattern: $X = $N;
+      - pattern: return $N;
+      - pattern: $N$OP
     metavariable-pattern:
-      metavariable: $NUM
-      pattern-regex: "^(2|3|4|5|6|7|8|9|[1-9][0-9]+)$"
+      metavariable: $N
+      pattern-regex: ^(1[1-9]|[2-9][0-9]+|[1-9][0-9]{2,})$  # 11 and above
 
-  # 16. Field injection forbidden
+  # 16. Field injection — allows @Value, blocks @Autowired
   - id: no-field-autowired
-    message: "Field injection banned. Use constructor injection."
-    severity: ERROR
     languages: [java]
-    pattern: |
-      @Autowired
-      private $T $FIELD;
+    severity: ERROR
+    message: Field injection with @Autowired is banned. Use constructor injection.
+    patterns:
+      - pattern: |
+          @Autowired
+          $MODIFIER $TYPE $FIELD;
+      - pattern-not: |
+          @Value
