--- a/semgrep-rules/java-warning.yml
+++ b/semgrep-rules/java-warning.yml
@@ -30,16 +30,14 @@ rules:
     languages: [java]
     severity: ERROR
     message: Logging sensitive data. Mask before logging (e.g., maskPassword(password)).
-    pattern-either:
-      # Direct variable logging
-      - pattern: logger.$METHOD(..., $VAR, ...)
-      # String concatenation
-      - pattern: logger.$METHOD("..." + $VAR + ...)
-      # String.format style
-      - pattern: logger.$METHOD(String.format(..., $VAR, ...), ...)
-    metavariable-pattern:
-      metavariable: $VAR
-      pattern-regex: (?i).*(password|passwd|pwd|token|secret|apikey|api_key|clientsecret|client_secret|bearer|cardnumber|card_number|pan|cvv|pin|ssn|social_security).*
+    patterns:
+      - pattern-either:
+          - pattern: logger.$METHOD(..., $VAR, ...)
+          - pattern: logger.$METHOD("..." + $VAR + ...)
+          - pattern: logger.$METHOD(String.format(..., $VAR, ...), ...)
+      - metavariable-regex:
+          metavariable: $VAR
+          regex: (?i).*(password|passwd|pwd|token|secret|apikey|api_key|clientsecret|client_secret|bearer|cardnumber|card_number|pan|cvv|pin|ssn|social_security).*
 
   # 5. Hardcoded credentials — real secrets only, exclude test/example patterns
   - id: hardcoded-credentials
@@ -57,19 +55,12 @@ rules:
     message: Hardcoded URL detected. Move to @Value or application.yml/properties.
     patterns:
       - pattern-either:
-          # Variable assignment
-          - pattern: |
-              $TYPE $VAR = "https://...";
-          # Field initialization
-          - pattern: |
-              $MODIFIER $TYPE $VAR = "https://...";
-          # Method return
-          - pattern: |
-              return "https://...";
-      - metavariable-pattern:
+          - pattern: $TYPE $VAR = "https://...";
+          - pattern: $MODIFIER $TYPE $VAR = "https://...";
+          - pattern: return "https://...";
+      - metavariable-regex:
           metavariable: $VAR
-          pattern-regex: (?i).*(url|endpoint|host|base|uri|address|service).*
-      # Exclude safe domains
+          regex: (?i).*(url|endpoint|host|base|uri|address|service).*
       - pattern-not-regex: '(?i)(localhost|127\.0\.0\.1|0\.0\.0\.0|example\.com|test\.|docs\.|schemas\.|xmlns)'
 
   # 7. SQL injection via string concatenation — only actual query execution
@@ -77,21 +68,19 @@ rules:
     languages: [java]
     severity: ERROR
     message: SQL injection risk via string concatenation. Use QueryDSL, JPA Criteria, or PreparedStatement parameters.
-    pattern-either:
-      # JDBC execute methods
-      - pattern: $STMT.executeQuery($Q + ...)
-      - pattern: $STMT.execute($Q + ...)
-      - pattern: $STMT.executeUpdate($Q + ...)
-      # JdbcTemplate
-      - pattern: $JDBC.query($Q + ...)
-      - pattern: $JDBC.update($Q + ...)
-      - pattern: $JDBC.queryForObject($Q + ...)
-      - pattern: $JDBC.queryForList($Q + ...)
-      # EntityManager native query
-      - pattern: $EM.createNativeQuery($Q + ...)
-    metavariable-pattern:
-      metavariable: $Q
-      pattern-regex: (?i).*(select|insert|update|delete|from|where).*
+    patterns:
+      - pattern-either:
+          - pattern: $STMT.executeQuery($Q + ...)
+          - pattern: $STMT.execute($Q + ...)
+          - pattern: $STMT.executeUpdate($Q + ...)
+          - pattern: $JDBC.query($Q + ...)
+          - pattern: $JDBC.update($Q + ...)
+          - pattern: $JDBC.queryForObject($Q + ...)
+          - pattern: $JDBC.queryForList($Q + ...)
+          - pattern: $EM.createNativeQuery($Q + ...)
+      - metavariable-regex:
+          metavariable: $Q
+          regex: (?i).*(select|insert|update|delete|from|where).*
 
   # 8. Thread.sleep — blocks container threads
   - id: no-thread-sleep
@@ -111,9 +100,6 @@ rules:
           for (...) {
             ...
           }
-      - metavariable-type:
-          metavariable: $S
-          type: java.lang.String
 
   # 10. Expensive object creation in loop — focused on known heavy objects
   - id: expensive-object-in-loop
@@ -128,7 +114,6 @@ rules:
       - pattern-either:
           - pattern: new SimpleDateFormat(...)
           - pattern: new DateFormat(...)
-          - pattern: new Pattern.compile(...)
           - pattern: Pattern.compile(...)
           - pattern: new ObjectMapper(...)
           - pattern: new Gson(...)
@@ -148,13 +133,11 @@ rules:
             ...
           }
       - pattern-either:
-          # Repository/DAO calls
           - pattern: $REPO.$METHOD(...)
-          # Entity getter calls (lazy loading)
           - pattern: $E.get$RELATION()
-      - metavariable-pattern:
+      - metavariable-regex:
           metavariable: $REPO
-          pattern-regex: .*(Repository|Repo|Dao|DAO)
+          regex: .*(Repository|Repo|Dao|DAO)
 
   # 12. String comparison with == operator
   - id: string-equals-operator
@@ -163,11 +146,9 @@ rules:
     message: Use .equals() or .equalsIgnoreCase() for String comparison, not == or !=.
     pattern-either:
       - pattern: $STR == "..."
-      - pattern: "..." == $STR
+      - pattern: '"..." == $STR'
       - pattern: $STR != "..."
-      - pattern: "..." != $STR
-      - pattern: $STR1 == $STR2
-      - pattern: $STR1 != $STR2
+      - pattern: '"..." != $STR'
 
   # 13. DTO/Request/Response with public fields — should be private
   - id: dto-public-fields
@@ -175,18 +156,15 @@ rules:
     severity: ERROR
     message: DTO/Request/Response fields must be private. Use getters/setters, Lombok, or Java records.
     patterns:
-      - pattern: |
-          public $T $FIELD;
+      - pattern: public $T $FIELD;
       - pattern-inside: |
           class $NAME {
             ...
           }
-      - metavariable-pattern:
+      - metavariable-regex:
           metavariable: $NAME
-          pattern-regex: .*(DTO|Dto|Request|Response|Spec|Specification|VO|Model)$
-      # Exclude constants
-      - pattern-not: |
-          public static final $T $FIELD = ...;
+          regex: .*(DTO|Dto|Request|Response|Spec|Specification|VO|Model)$
+      - pattern-not: public static final $T $FIELD = ...;
 
   # 14. Magic numbers — only in assignments, exclude common values
   - id: magic-numbers
@@ -195,16 +173,11 @@ rules:
     message: Replace magic number with named constant (static final) for maintainability.
     patterns:
       - pattern-either:
-          # Field assignment
-          - pattern: |
-              $VAR = $N;
-          # Method parameter
-          - pattern: |
-              $METHOD($N)
-      - metavariable-pattern:
+          - pattern: $VAR = $N;
+          - pattern: $METHOD($N)
+      - metavariable-regex:
           metavariable: $N
-          pattern-regex: ^(1[1-9]|[2-9][0-9]|[1-9][0-9]{2,})$
-      # Exclude common HTTP status codes
+          regex: ^(1[1-9]|[2-9][0-9]|[1-9][0-9]{2,})$
       - pattern-not: $VAR = 200;
       - pattern-not: $VAR = 201;
       - pattern-not: $VAR = 400;
@@ -214,16 +187,13 @@ rules:
       - pattern-not: $VAR = 500;
       - pattern-not: $VAR = 502;
       - pattern-not: $VAR = 503;
-      # Exclude common port numbers
       - pattern-not: $VAR = 8080;
       - pattern-not: $VAR = 8443;
       - pattern-not: $VAR = 3000;
       - pattern-not: $VAR = 5432;
       - pattern-not: $VAR = 3306;
-      # Exclude already constants
       - pattern-not-inside: |
           static final $TYPE $CONST = ...;
-      # Exclude enum constructors
       - pattern-not-inside: |
           enum $E {
             ...
@@ -238,13 +208,7 @@ rules:
       - pattern: |
           @Autowired
           $TYPE $FIELD;
-      # Allow @Value for configuration
       - pattern-not: |
-          @Value(...)
-          @Autowired
-          $TYPE $FIELD;
-      - pattern-not: |
-          @Autowired
           @Value(...)
           $TYPE $FIELD;
 
@@ -255,28 +219,17 @@ rules:
     message: Resource leak detected. Use try-with-resources for auto-closing (InputStream, Connection, Statement, Reader, etc.).
     patterns:
       - pattern-either:
-          - pattern: |
-              $RES = new FileInputStream(...);
-          - pattern: |
-              $RES = new FileOutputStream(...);
-          - pattern: |
-              $RES = new FileReader(...);
-          - pattern: |
-              $RES = new FileWriter(...);
-          - pattern: |
-              $RES = new BufferedReader(...);
-          - pattern: |
-              $RES = $CONN.createStatement();
-          - pattern: |
-              $RES = $CONN.prepareStatement(...);
-      # Exclude try-with-resources
+          - pattern: $RES = new FileInputStream(...);
+          - pattern: $RES = new FileOutputStream(...);
+          - pattern: $RES = new FileReader(...);
+          - pattern: $RES = new FileWriter(...);
+          - pattern: $RES = new BufferedReader(...);
+          - pattern: $RES = $CONN.createStatement();
+          - pattern: $RES = $CONN.prepareStatement(...);
       - pattern-not-inside: |
           try ($RES = ...) {
             ...
           }
-      # Exclude when immediately returned (caller's responsibility)
-      - pattern-not-inside: |
-          return new ...;
 
   # 18. Null check after dereferencing — logic error
   - id: null-check-after-dereference
@@ -345,11 +298,7 @@ rules:
     languages: [java]
     severity: ERROR
     message: Arrays.asList() doesn't work as expected with primitive arrays. Use IntStream, LongStream, or manual conversion.
-    pattern-either:
-      - pattern: Arrays.asList($ARR)
-    metavariable-pattern:
-      metavariable: $ARR
-      pattern-regex: .*(int\[\]|long\[\]|double\[\]|float\[\]|byte\[\]|short\[\]|char\[\]|boolean\[\]).*
+    pattern: Arrays.asList($ARR)
 
   # 23. Modifying collection while iterating
   - id: modify-collection-while-iterating
@@ -371,6 +320,3 @@ rules:
     severity: ERROR
     message: Creating BigDecimal from double loses precision. Use BigDecimal.valueOf() or String constructor instead.
     pattern: new BigDecimal($D)
-    metavariable-pattern:
-      metavariable: $D
-      pattern-regex: .*\d+\.\d+.*
