--- a/semgrep-rules/java-warning.yml
+++ b/semgrep-rules/java-warning.yml
@@ -321,74 +321,69 @@ rules:
     message: Creating BigDecimal from double loses precision. Use BigDecimal.valueOf() or String constructor instead.
     pattern: new BigDecimal($D)
 
-      # 1. Truly empty catch blocks (FIXED - simplified pattern)
+    rules:
+
+  # 1. Empty catch blocks - FIXED with better pattern
   - id: empty-catch-block
     languages: [java]
     severity: ERROR
     message: Empty catch block swallows exceptions. At minimum log or rethrow.
-    patterns:
-      - pattern: |
-          catch ($EX $E) {
-          }
-      - pattern-not: |
-          catch ($EX $E) {
-            // ...
-          }
-      - pattern-not: |
-          catch ($EX $E) {
-            /* ... */
-          }
+    pattern: |
+      catch (...) {
+      }
 
-  # 11. N+1 query detection (FIXED - separated patterns)
+  # 11a. N+1 query - repository calls in loop
   - id: nplus1-query-repository
     languages: [java]
     severity: ERROR
     message: Potential N+1 query - repository call inside loop. Use JOIN FETCH, @EntityGraph, or batch fetching.
     patterns:
-      - pattern-inside: |
+      - pattern: |
           for ($E : $LIST) {
             ...
+            $REPO.$METHOD(...);
+            ...
           }
-      - pattern: $REPO.$METHOD(...)
       - metavariable-regex:
           metavariable: $REPO
-          regex: .*(Repository|Repo|Dao|DAO).*
+          regex: .*(Repository|Repo|repository|repo)
 
-  # 11b. N+1 query - lazy loading (separate rule for better detection)
+  # 11b. N+1 query - entity getter calls (lazy loading)
   - id: nplus1-query-lazy-loading
     languages: [java]
     severity: ERROR
     message: Potential N+1 query - lazy loading inside loop. Use JOIN FETCH or @EntityGraph to fetch eagerly.
     patterns:
-      - pattern-inside: |
-          for ($E : $LIST) {
+      - pattern: |
+          for ($ITEM : $ITEMS) {
+            ...
+            $ITEM.get$METHOD(...);
             ...
           }
-      - pattern: $E.get$RELATION(...)
+      - metavariable-regex:
+          metavariable: $METHOD
+          regex: (Orders|Users|Payments|Invoices|Customer|Product|Items|Details|Address|Profile)
 
-  # 23. Modifying collection while iterating (FIXED - better pattern matching)
+  # 23a. Remove from collection while iterating
   - id: modify-collection-while-iterating-remove
     languages: [java]
     severity: ERROR
     message: Removing from collection during iteration causes ConcurrentModificationException. Use Iterator.remove() instead.
-    patterns:
-      - pattern: |
-          for ($ITEM : $COLL) {
-            ...
-            $COLL.remove(...);
-            ...
-          }
+    pattern: |
+      for ($ITEM : $COLL) {
+        ...
+        $COLL.remove(...);
+        ...
+      }
 
-  # 23b. Adding to collection while iterating (separate for clarity)
+  # 23b. Add to collection while iterating
   - id: modify-collection-while-iterating-add
     languages: [java]
     severity: ERROR
     message: Adding to collection during iteration causes ConcurrentModificationException. Collect to new collection instead.
-    patterns:
-      - pattern: |
-          for ($ITEM : $COLL) {
-            ...
-            $COLL.add(...);
-            ...
-          }
-
+    pattern: |
+      for ($ITEM : $COLL) {
+        ...
+        $COLL.add(...);
+        ...
+      }
